    JVM:
        - a lot smaller stuff, fixes, more integration work
        - decoupled JVM from main code into seperate repository

    Mod Loader:
        - rewritten initial discovery system for mods, making it more extendable
        - mods can now provide mod loaders, finally (before, mods where to late to do stuff)
        - mod loading order is no longer stable (inside the dependencies)


changelog of snapshot 21w23a released on 9.6.2021 targeting 1.17
    Networking:
        - further work on the network system

    Event system:
        - improved internal event bus system

    Mod loader:
        - moved ExtensionPoint class to mod package [MP4-11]
        - added ModLoader extension point for JavaFML
        - mods have now a "resource_access" attribute holding the resource access of that mod

    JavaFML:
        - implement a JVM in python for loading minecraft: java edition mods
        - added transformer system for transforming java bytecode defined objects into readable code for our loader

        The following mods are known to load partially:
            - biomesoplenty, tested with 1.16.5-13.1.0.471
            - storage drawers, tested with 1.16.3-8.2.2

        Any other mod may or may not load; Implementation wrappers for parts are welcome to be PR'ed
        We cannot guarantee any mod to load as out system changes rapidly

    Storage:
        - improved storage of block palette and entities
        - improved general storage layout


changelog of snapshot 21w20a released on 19.5.2021 targeting 21w19a
    This snapshot again breaks backwards compatibility.
    We have refactored again some stuff

    Test Framework:
        - tweaked some stuff

    Commands:
        - added /chunk delete all command
        - added /chunk dumpdatadebug [all] command

    World generation:
        - added debug helper code for dumping the map structure in image format

    Modding:
        - removed the API management system