@@ -1,3 +1,16 @@
+"""
+mcpython - a minecraft clone written in python licenced under the MIT-licence 
+(https://github.com/mcpython4-coding/core)
+
+Contributors: uuk, xkcdjerry (inactive)
+
+Based on the game of fogleman (https://github.com/fogleman/Minecraft), licenced under the MIT-licence
+Original game "minecraft" by Mojang Studios (www.minecraft.net), licenced under the EULA
+(https://account.mojang.com/documents/minecraft_eula)
+Mod loader inspired by "Minecraft Forge" (https://github.com/MinecraftForge/MinecraftForge) and similar
+
+This project is not official by mojang and does not relate to it.
+"""
 import enum
 import time
 
@@ -9,6 +22,7 @@ from pyglet.window import key
 @onlyInClient()
 class HotKeys(enum.Enum):
     # from https://minecraft.gamepedia.com/Debug_screen
+    # todo: do NOT use a enum here, we need something extendable!
 
     RELOAD_CHUNKS = ([key.F3, key.A], "hotkey:chunk_reload")
     GAME_CRASH = ([key.F3, key.C], "hotkey:game_crash", 10)
