@@ -62,6 +62,16 @@ changelog of snapshot <21w??a> released on <?> targeting <1.17.1?>
         - mods can now provide mod loaders, finally (before, mods where to late to do stuff)
         - mod loading order is no longer stable (inside the dependencies)
 
+    Internals:
+        - a big chunk of refactoring, most mods will NOT work
+
+    Block Item Generator:
+        - some internal changes, more fail-save, will not generate as much noise when something fails, will skip
+            blocks with no-rendering, but will be mostly faster
+
+    Rendering:
+        - internal optimisations for the rendering system, refactored some bits, removed unneeded stuff
+
 
 changelog of snapshot 21w23a released on 9.6.2021 targeting 1.17
     Networking:
